Footer Nav bar text cut off issue

--- a/eplayer/src/routes/ETBook/components/Book.scss
+++ b/eplayer/src/routes/ETBook/components/Book.scss
@@ -65,3 +65,6 @@ $cont-padding-bottom: 85px;
     }
   }
 }
+.navigation .section .contentWrapper .content {
+  line-height: 1.3;
+}
